[ADD] Make JWT Authentication enable